--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <!-- caja estática  (la hago dinamica en js)-->
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="script.js"></script>
 </body>
 </html>
